# KimCadClaude

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  audit-lite-ui-v2-slice-5-smart-mesh-2026-06-12.md  audit-lite-ui-v2-slice-6-print-outcome-2026-06-12.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  pr-smoke.yml
bench/: prompts.example.yaml  prompts.yaml
config/: default.yaml
docs/: FAQ.md  MODEL-GUIDE.md  README.md  USER-MANUAL.md  api.md  cadquery-backend.md  definition-of-done.md  getting-started-windows.md  guide-my-designs.md  guide-photo-onramp.md  guide-settings-and-cloud.md  guide-sliders-and-units.md  install-guide.md  printproof3d-integration.md  stage-8.5-usability-plan.md  supported-printers.md  troubleshooting.md
docs/audits/: RUN-LEDGER-2026-06-05.md
docs/audits/stage-6/: audit-lite-slice-4-bakeoff-2026-06-02.md
docs/audits/stage-7/: audit-lite-slice-1-smart-mesh-readiness-2026-06-02.md
docs/audits/stage-8.5/: audit-lite-slice-1-backend-persistence-2026-06-03.md
docs/audits/stage-8.5/audit-team-slice-1-2026-06-03/: next-sprint-watchlist.md
docs/audits/stage-8.5/stage-gate-2026-06-05/: 00-executive-audit.md
docs/benchmarks/: stage-5-template-families.md  stage-6-model-bakeoff.md  stage-8-cadquery-backend.md  stage-9-vision-onramps.md
docs/design/: KimCad-Unified-Product-Spec-v3.0.md  README.md  stage-8.5-slice-5-onramps.md
docs/dev/: kimcad-burndown-plan.md
docs/dev/plans/: kc-19-template-breadth.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  connectorStatus.test.ts  connectorStatus.ts  designPhase.test.ts  designPhase.ts  designStatus.test.ts  designStatus.ts  glossary.ts  main.tsx  objectType.test.ts  objectType.ts  openExternal.test.ts  openExternal.ts  printEstimate.test.ts  printEstimate.ts  styles.css  tone-contrast.test.ts  useHashRoute.test.ts  useHashRoute.ts  useTheme.test.ts  useTheme.ts  useUnits.test.ts  useUnits.ts
frontend/src/components/: ChatPanel.test.tsx  ChatPanel.tsx  ConfirmDialog.tsx  ConnectionsCard.test.tsx  ConnectionsCard.tsx  ConnectorStatus.tsx  ExportPanel.test.tsx  ExportPanel.tsx  FirstRunWizard.test.tsx  FirstRunWizard.tsx  InfoTip.test.tsx  InfoTip.tsx  Landing.tsx  LibraryModal.test.tsx  LibraryModal.tsx  ModelHealthPill.test.tsx  ModelHealthPill.tsx  MyDesigns.test.tsx  MyDesigns.tsx  PhotoOnramp.test.tsx  PhotoOnramp.tsx  RightPanel.test.tsx  RightPanel.tsx  SendPanel.test.tsx  SendPanel.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  ShortcutsHelp.test.tsx  ShortcutsHelp.tsx  Topbar.test.tsx  Topbar.tsx  VersionRail.test.tsx  VersionRail.tsx  Viewport.test.tsx  Viewport.tsx  Workspace.test.tsx  Workspace.tsx
frontend/src/viewport/: KCViewport.measure.test.ts  KCViewport.test.ts  KCViewport.ts
installer/: kimcad.iss  kimcad_launcher.py
scripts/: build_installer.py  build_printer_catalog.py  ci.sh  fetch_tools.py  verify_install.py
src/kimcad/: __init__.py  bakeoff.py  bambu_connector.py  benchmark.py  cadquery_runner.py  cadquery_templates.py  cadquery_worker.py  cli.py  config.py  connectors.py  design_registry.py  design_store.py  hardening.py  history.py  ir.py  llm_provider.py  mcp_server.py  mock_moonraker.py  mock_printer.py  mock_prusalink.py  model_advisor.py  model_pull.py  moonraker_connector.py  octoprint_connector.py  openscad_runner.py  orientation.py  paths.py  pipeline.py  printability.py  printer_connector.py  printproof3d.py  prusalink_connector.py  settings_store.py  shell.py  slicer.py  smart_mesh.py  subprocess_env.py  template_bench.py  templates.py  validation.py  (+1 more)
src/kimcad/prompts/: system_cadquery.md  system_design_plan.md  system_openscad.md  system_photo_seed.md
src/kimcad/web/: index.html
src/kimcad/web/assets/: Workspace.js  index.css  kimcad.js
tests/: conftest.py  test_bakeoff.py  test_bambu_connector.py  test_benchmark.py  test_build_installer.py  test_cadquery_bench.py  test_cadquery_runner.py  test_cadquery_templates.py  test_cli.py  test_config.py  test_connections_api.py  test_connectors.py  test_design_registry.py  test_design_store.py  test_fallback_provider.py  test_fetch_tools.py  test_first_run_errors.py  test_frontend.py  test_geometry.py  test_hardening.py  test_history.py  test_ir.py  test_library_modules.py  test_llm_provider.py  test_mcp_server.py  test_model_advisor.py  test_model_pull.py  test_moonraker_connector.py  test_octoprint_connector.py  test_openscad_runner.py  test_paths.py  test_pipeline.py  test_pipeline_backends.py  test_pipeline_readiness.py  test_pipeline_templates.py  test_printability.py  test_printer_catalog.py  test_printer_connector.py  test_printproof3d.py  test_project_hygiene.py  (+10 more)
