[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kimcad"
version = "0.1.0"
description = "AI-assisted parametric design for functional 3D prints"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Scott Converse" }]
dependencies = [
    "openai>=1.40",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "trimesh>=4.4",
    "numpy>=2.0",
    # trimesh runtime backends KimCad relies on (not imported directly): scipy powers
    # connected-component split / body_count and convex ops; networkx backs graph ops.
    "scipy>=1.13",
    "networkx>=3.3",
    "lxml>=5.0",  # trimesh's 3MF reader (default output format) requires it
    # Manifold3D guarantees a clean 2-manifold mesh before slicing (pre-slice hardening).
    # Optional at runtime: if absent, hardening is skipped and the validated mesh is used.
    "manifold3d>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
kimcad = "kimcad.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
