[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kimcad"
version = "0.1.0"
description = "AI-assisted parametric design for functional 3D prints"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Scott Converse" }]
dependencies = [
    "openai>=1.40",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "trimesh>=4.4",
    "numpy>=2.0",
    # trimesh runtime backends KimCad relies on (not imported directly): scipy powers
    # connected-component split / body_count and convex ops; networkx backs graph ops.
    "scipy>=1.13",
    "networkx>=3.3",
    "lxml>=5.0",  # trimesh's 3MF reader (default output format) requires it
    # Manifold3D guarantees a clean 2-manifold mesh before slicing (pre-slice hardening).
    # HARD dependency — always installed. The import guard in hardening.py is a DEFENSIVE
    # fallback for a broken/partial install (degrades to the gate-validated mesh), NOT an
    # "optional feature" switch; see hardening.py's module docstring (ENG-007).
    "manifold3d>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",  # `pytest --cov=kimcad --cov-branch` to spot un-entered branches
    "ruff>=0.5",
]

[project.scripts]
kimcad = "kimcad.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# ENG-006: even a bare `pytest .` must not collect the bundled third-party OpenSCAD library
# tests under tools/ (legacy pytest API, not KimCad code) — keep the gate signal clean.
norecursedirs = ["tools", ".venv"]
markers = [
    # Tests that invoke the real OrcaSlicer binary (live assembly). Run the fast inner loop
    # with `pytest -m "not live"`; the full suite (CI) runs everything.
    "live: exercises a real external tool (OrcaSlicer) — slower, needs the binary/profiles",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
