[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kimcad"
version = "0.1.0"
description = "AI-assisted parametric design for functional 3D prints"
readme = "README.md"
# Python 3.13 is THE supported line for this version (decided 2026-06-10): new enough for
# every pinned wheel, old enough that CadQuery's OCCT backend runs on the SAME interpreter
# line (3.14 is too new for it). The floor is what we test and ship on.
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Scott Converse" }]
dependencies = [
    "openai>=1.40",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "trimesh>=4.4",
    "numpy>=2.0",
    # trimesh runtime backends KimCad relies on (not imported directly): scipy powers
    # connected-component split / body_count and convex ops; networkx backs graph ops.
    "scipy>=1.13",
    "networkx>=3.3",
    "lxml>=5.0",  # trimesh's 3MF reader (default output format) requires it
    # Manifold3D guarantees a clean 2-manifold mesh before slicing (pre-slice hardening).
    # HARD dependency — always installed. The import guard in hardening.py is a DEFENSIVE
    # fallback for a broken/partial install (degrades to the gate-validated mesh), NOT an
    # "optional feature" switch; see hardening.py's module docstring (ENG-007).
    "manifold3d>=3.0",
    # ENG-001: the OpenRouter key lives in the OS credential store (Windows Credential
    # Manager) at rest. settings_store degrades to the disclosed file fallback if the
    # backend is unusable, so this stays a soft runtime requirement in behavior.
    "keyring>=25.0",
]

[project.optional-dependencies]
# Bambu Lab native direct print (Stage 10) - optional; without it the bambu connectors
# report 'not set up' with the install hint (graceful absence, like CadQuery).
bambu = ["bambulabs-api>=2.6"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",  # `pytest --cov=kimcad --cov-branch` to spot un-entered branches
    "ruff>=0.5",
]

[project.scripts]
kimcad = "kimcad.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# ENG-006: even a bare `pytest .` must not collect the bundled third-party OpenSCAD library
# tests under tools/ (legacy pytest API, not KimCad code) — keep the gate signal clean.
norecursedirs = ["tools", ".venv"]
markers = [
    # Tests that invoke the real OrcaSlicer binary (live assembly). Run the fast inner loop
    # with `pytest -m "not live"`; the full suite (CI) runs everything.
    "live: exercises a real external tool (OrcaSlicer) — slower, needs the binary/profiles",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
